--- a/client/templates/workers/account.html
+++ b/client/templates/workers/account.html
@@ -1,3 +1,4 @@
+<!-- Worker's Navigation Bar -->
 <nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container">
     <a ui-sref="home" class="navbar-brand">Back To Root</a>
@@ -9,5 +10,6 @@
     </ul>
   </div>
 </nav>
+
 <h1>Worker Account</h1>
 <div ui-view></div>
