--- a/client/templates/workers/createChildTag.html
+++ b/client/templates/workers/createChildTag.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="row">
     <!-- child data -->
-    <div class="col-md-3">
+    <div class="col-md-6">
       <h2>Child Info</h2>
       <input 
       ng-model="tempChildObj.child.firstName" 
@@ -50,7 +50,7 @@
       placeholder="Bio"/>
     </div>
     <!-- Request Data -->
-    <div class="col-md-3">
+    <div class="col-md-6">
       <h2>Request Info</h2>
       <input 
       ng-model="tempChildObj.request.items[0].item" 
@@ -82,7 +82,7 @@
       type="text" 
       name="item3Price" 
       placeholder="Third Item Price"/></div>
-    <div class="col-md-3">
+    <!-- <div class="col-md-3">
       <h2>Worker Info</h2>
       <input 
       ng-model="tempChildObj.worker.firstName" 
@@ -178,7 +178,7 @@
       name="donorZip" 
       placeholder="Donor's Zip"/>
     </div>
-  </div>
+  </div> -->
 </div>
 
 <br/>
