--- a/client/templates/public/children.html
+++ b/client/templates/public/children.html
@@ -1,7 +1,16 @@
-<h1>Children</h1>
+<h1>CURRENTLY UNUSED</h1>
+<!-- HSF TEXT -->
+<div>
+  <img src="../../assets/images/placeholders/hsa_info.png" alt="">
+</div>
+<!-- NEWS AND EVENTS -->
+<div>
+  <img src="../../assets/images/placeholders/news_and_events.png" alt="">
+</div>
+
 
 <div>
-
+  <h1>Children</h1>
   <div class="center box lg" ng-repeat="child in children">
     <img src="http://cdn.mhpbooks.com/uploads/2013/10/Success-Kid.jpg" alt="some kid">
     <!-- child's name -->
@@ -35,7 +44,7 @@
     </div>
     <br/>
   </div>
-
 </div>
-
-
+<div ng-hide="children">
+  <p class="center">no children data!</p>
+</div>
