Add admin creation of accounts and views (very naiive)

--- a/client/templates/admin/account.html
+++ b/client/templates/admin/account.html
@@ -1,1 +1,8 @@
 <h1>Admin Account</h1>
+
+<button ui-sref="admin.account.accountManagement.create" class="btn btn-primary">Add New User</button>
+<button ui-sref="admin.account.accountManagement.workers" class="btn btn-primary">Show Workers</button>
+<button ui-sref="admin.account.accountManagement.admin" class="btn btn-primary">Show Admin</button>
+<button ui-sref="admin.account.accountManagement.helpDesk" class="btn btn-primary">Show Help Desk Users</button>
+
+<div ui-view></div>
