added content from original site; updated price data in worker/home child feed

--- a/client/templates/workers/childrenFeed.html
+++ b/client/templates/workers/childrenFeed.html
@@ -21,7 +21,7 @@
     </div>
     <div ng-repeat="item in child.request.items.items">
       <div class="box xs inline" style="margin-left: 20px">
-        $(price data){{item.price}} {{item.item}}
+        ${{item.price}} for {{item.item}}
 
         <!-- Visual Status -->
         <p 
