resolved lingering merge conflicts

--- a/client/templates/workers/account.html
+++ b/client/templates/workers/account.html
@@ -1,7 +1,7 @@
 <!-- Worker's Navigation Bar -->
 <nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container">
-    <a ui-sref="home" class="navbar-brand">Back To Root</a>
+    <a ui-sref="root" class="navbar-brand">Back To Root</a>
     <ul class="nav navbar-nav">
       <li><a ui-sref=".myAccount">My Account</a></li>
       <li><a ui-sref=".myTags">My Children Tags</a></li>
