fixed minor type on ahref to facebook page

--- a/client/templates/public/home.html
+++ b/client/templates/public/home.html
@@ -15,7 +15,7 @@
     <em>“Thank You for helping me get my smile beautiful.  I hope other people are able to receive beautiful smiles like mine….. I feel very happy because you’re all wonderful people with very big hearts.”  --- girl served by our orthodontic program</em>
   </p>
   <p class="center">
-    Join our F<a href="http://www.facebook.com/childrensfundsmc">acebook Page for information on all our events and activities!  </a>
+    <a href="http://www.facebook.com/childrensfundsmc">Join our Facebook Page for information on all our events and activities!  </a>
   </p>
   <p class="center">
     <strong><em>Thank you for your support!  For more details, contact:  <a href="mailto:childrensfund@smchsa.org">childrensfund@smchsa.org</a></em></strong>
