--- a/client/templates/workers/myAccount.html
+++ b/client/templates/workers/myAccount.html
@@ -1,2 +1,76 @@
 <h1>My Account</h1>
-<p>Worker's indiv account information can go here</p>
+
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th>Field</th>
+      <th>Value (Click to edit)</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>First Name</td>
+      <td editable-text="workerData.firstName" onaftersave="postWorkerData(firstName, workerData.firstName)">
+        {{ workerData.firstName || 'Enter your First Name' }}
+      </td>
+    </tr>
+    <td>Last Name</td>
+      <td editable-text="workerData.lastName" onaftersave="postWorkerData(lastName, workerData.lastName)">
+        {{ workerData.lastName || 'Enter your Last Name' }}
+      </td>
+    </tr>
+    <td>Phone</td>
+      <td editable-text="workerData.phone" onaftersave="postWorkerData(phone, workerData.phone)">
+        {{ workerData.phone || 'Enter your Phone Number' }}
+      </td>
+    </tr>
+    <td>Email</td>
+      <td editable-text="workerData.email" onaftersave="postWorkerData(email, workerData.email)">
+        {{ workerData.email || 'Enter your Email' }}
+      </td>
+    </tr>
+    <td>Department Name</td>
+      <td editable-text="workerData.department" onaftersave="postWorkerData(department, workerData.department)">
+        {{ workerData.department || 'Enter your Department' }}
+      </td>
+    </tr>
+    <td>Supervisor's First Name</td>
+      <td editable-text="workerData.supervisorFirstName" onaftersave="postWorkerData(supervisorFirstName, workerData.supervisorFirstName)">
+        {{ workerData.supervisorFirstName || 'Enter your Supervisor\'s First Name' }}
+      </td>
+    </tr>
+    <td>Supervisor's Last Name</td>
+      <td editable-text="workerData.supervisorLastName" onaftersave="postWorkerData(supervisorLastName, workerData.supervisorLastName)">
+        {{ workerData.supervisorLastName || 'Enter your Supervisor\'s Last Name' }}
+      </td>
+    </tr>
+    <td>Coordinator's First Name</td>
+      <td editable-text="workerData.coordinatorFirstName" onaftersave="postWorkerData(coordinatorFirstName, workerData.coordinatorFirstName)">
+        {{ workerData.coordinatorFirstName || 'Enter your Coordinator\'s First Name' }}
+      </td>
+    </tr>
+    <td>Coordinator's Last Name</td>
+      <td editable-text="workerData.coordinatorLastName" onaftersave="postWorkerData(coordinatorLastName, workerData.coordinatorLastName)">
+        {{ workerData.coordinatorLastName || 'Enter your Coordinator\'s Last Name' }}
+      </td>
+    </tr>
+  </tbody>
+</table>
+
+
+<!--
+workerData: 
+  {
+    accountID: 'string',
+    firstName: 'Wayland',
+    lastName: 'Gangsta-fresh',
+    phone: '12903812124',
+    email: 'someemail',
+    department: 'someDept',
+    supervisorFirstName: 'Marcus',
+    supervisorLastName: 'Phillips',
+    coordinatorFirstName: 'Tony',
+    coordinatorLastName 'Phillips'
+  }
+-->
+
