--- a/client/templates/workers/createChildTag.html
+++ b/client/templates/workers/createChildTag.html
@@ -61,39 +61,39 @@
     <div class="col-md-6">
       <h2>Request Info</h2>
       <input 
-      ng-model="tempChildObj.child.items[0].item" 
+      ng-model="tempChildObj.child.firstItemName" 
       type="text" 
       name="item1" 
       placeholder="First Item"/>
       <br/>
       <input 
-      ng-model="tempChildObj.child.items[0].price" 
+      ng-model="tempChildObj.child.firstItemPrice" 
       type="text" 
       name="item1Price" 
       placeholder="First Item Price"/>
       <br/>
       <br/>
       <input 
-      ng-model="tempChildObj.child.items[1].item" 
+      ng-model="tempChildObj.child.secondItemName" 
       type="text" 
       name="item2" 
       placeholder="Second Item"/>
       <br/>
       <input 
-      ng-model="tempChildObj.child.items[1].price" 
+      ng-model="tempChildObj.child.secondItemPrice" 
       type="text" 
       name="item2Price" 
       placeholder="Second Item Price"/>
       <br/>
       <br/>
       <input 
-      ng-model="tempChildObj.child.items[2].item" 
+      ng-model="tempChildObj.child.thirdItemName" 
       type="text" 
       name="item3" 
       placeholder="Third Item"/>
       <br/>
       <input 
-      ng-model="tempChildObj.child.items[2].price" 
+      ng-model="tempChildObj.child.thirdItemPrice" 
       type="text" 
       name="item3Price" 
       placeholder="Third Item Price"/></div>
