--- a/client/templates/public/home.html
+++ b/client/templates/public/home.html
@@ -4,42 +4,42 @@
     <img src="http://cdn.mhpbooks.com/uploads/2013/10/Success-Kid.jpg" alt="some kid">
     <!-- child's name -->
     <div>
-      {{ child.child.firstName }}
+      {{ child.firstName }}
     </div>
     <!-- child's location -->
     <div>
-      {{ child.child.firstName }}'s Location
+      {{ child.firstName }}'s Location
     </div>
     <!-- blurb about child -->
     <div>
       Blurb: 
       <br/>
-      {{ child.child.bio }}
+      {{ child.bio }}
     </div>
 
     <!-- ITEMS -->
     <div>
       <!-- item1 -->
       <div>
-        ${{ child.child.firstItemPrice }} for {{ child.child.firstItemName }}
+        ${{ child.firstItemPrice }} for {{ child.firstItemName }}
       </div>
       <!-- item2 -->
       <div>
-        ${{ child.child.secondItemPrice }} for {{ child.child.secondItemName }}
+        ${{ child.secondItemPrice }} for {{ child.secondItemName }}
       </div>
       <!-- item3 -->
       <div>
-        ${{ child.child.thirdItemPrice }} for {{ child.child.thirdItemName }}
+        ${{ child.thirdItemPrice }} for {{ child.thirdItemName }}
       </div>
     </div>
     <div>
       <input 
-      ng-hide="child.child.status" 
+      ng-hide="child.status" 
       ng-click="pledge(child, $index)" 
       type="button" 
       value="Pledge"/>
       <input 
-      ng-show="child.child.status" 
+      ng-show="child.status" 
       type="button" 
       disabled="disabled" 
       value="Pledged"/>
