created restful.pledgeChild; pledge button is fully functional

--- a/client/templates/public/home.html
+++ b/client/templates/public/home.html
@@ -35,7 +35,7 @@
     <div>
       <input 
       ng-hide="child.status" 
-      ng-click="pledge(child, $index)" 
+      ng-click="pledge(child)" 
       type="button" 
       value="Pledge"/>
       <input 
