workers are able to edit their children tags

--- a/client/templates/workers/createChildTag.html
+++ b/client/templates/workers/createChildTag.html
@@ -108,7 +108,7 @@
   <div class="center">
     <input
     class="btn btn-success"
-    ng-click="post()" 
+    ng-click="create()" 
     type="button" 
     name="submit" 
     value="Submit"/>
