pledged button sends donor to form, on submit, adds donor to DB and child is marked as pledged; home.html is sorted by createdAt and filtered by unpledged

--- a/client/templates/public/home.html
+++ b/client/templates/public/home.html
@@ -1,6 +1,6 @@
 <div>
   <h1>Children</h1>
-  <div class="center box lg" ng-repeat="child in children | orderBy:'createdAt'">
+  <div class="center box lg" ng-repeat="child in children | orderBy:'createdAt' :true | filter:{status: null}">
     <img src="http://cdn.mhpbooks.com/uploads/2013/10/Success-Kid.jpg" alt="some kid">
     <!-- child's name -->
     <div>
@@ -32,40 +32,16 @@
         ${{ child.thirdItemPrice }} for {{ child.thirdItemName }}
       </div>
     </div>
-<!--     <div>
-      <input 
-      ng-hide="child.status" 
-      ng-click="pledge(child)" 
-      type="button" 
-      value="Pledge"/>
-      <input 
-      ng-show="child.status" 
-      type="button" 
-      disabled="disabled" 
-      value="Pledged"/>
-    </div> -->
+
     <div ng-controller="pledgeController">
-      
-    <div>
-<!--       <input 
-      ng-click="pledgeButton(child, $index)"
-      type="button" 
-      value="PledgeButton"/> -->
-      <input 
-      ng-click="pledgeButton(child, $index)"
-      ui-sref="pledge"
-      type="button" 
-      value="PledgeButton"/>      
+      <div>
+        <input 
+        ng-click="pledgeButton(child, $index)"
+        ui-sref="pledge"
+        type="button" 
+        value="PledgeButton"/>      
+      </div>
     </div>
-
-
-
-    </div>
-
-
-
-
-
 
   </div>
 </div>
