after pledge, user is redirected home; created confirmation view; pledge process is 90% complete, need to implement mailer to send donor email

--- a/client/templates/public/donationSubmitted.html
+++ b/client/templates/public/donationSubmitted.html
@@ -1,5 +1,22 @@
-<h4>
-  Your donation request has been submitted!
+<div class="center">
+
+  <h4>
+    Your donation request has been submitted!
+    <br/>
+    <br/>
+    Please check your email for further instructions.
+  </h4>
+
   <br/>
-  Please check your email for further instructions.
-</h4>
+
+  <h5>
+    Redirecting to home...
+  </h5>
+
+  <br/>
+
+  <p>
+    <a ui-sref="root">Click here if you're not redirected in 3 seconds</a>
+  </p>
+
+</div>
