Admins can see JSON of kids/workers, ng-repeat bug fixed

--- a/client/templates/admin/account.html
+++ b/client/templates/admin/account.html
@@ -4,5 +4,7 @@
 <button ui-sref="admin.account.accountManagement.workers" class="btn btn-primary">Show Workers</button>
 <button ui-sref="admin.account.accountManagement.admin" class="btn btn-primary">Show Admin</button>
 <button ui-sref="admin.account.accountManagement.helpDesk" class="btn btn-primary">Show Help Desk Users</button>
+<button ui-sref="admin.account.children" class="btn btn-primary">Show Children</button>
+<button ui-sref="admin.account.workers" class="btn btn-primary">Show Workers</button>
 
 <div ui-view></div>
