Added nodemailer functionality to donors after they commit to a pledge

--- a/client/templates/public/pledge.html
+++ b/client/templates/public/pledge.html
@@ -31,6 +31,15 @@
     </div>
 
     <div class="form-group">
+      <label>Email</label>
+      <input 
+      ng-model="donor.email"
+      type="text"
+      class="form-control"
+      placeholder="Email"/>
+    </div>
+
+    <div class="form-group">
       <label>Address Line 1</label>
       <input 
       ng-model="donor.address1"
