--- a/client/templates/admin/children.html
+++ b/client/templates/admin/children.html
@@ -1,5 +1,23 @@
 <h1>List of Children ({{numChildren}})</h1>
 
-<ul>
-  <li ng-repeat="child in children">{{child}}</li>
-</ul>
+<div class="panel-group" id="accordion">
+  <div class="panel panel-default" ng-repeat="child in children">
+    <div class="panel-heading">
+      <h4 class="panel-title" ng-click="getWorker(child)">
+        <a data-toggle="collapse" data-parent="#accordion" href="#collapse{{child.id}}">
+          {{child.firstName}} {{child.lastName}}
+        </a>
+      </h4>
+    </div>
+    <div id="collapse{{child.id}}" class="panel-collapse collapse">
+      <div class="panel-body">
+        <table class="table">
+          <tr><th>Child ID</th><td>{{child.id}}</td></tr>
+          <tr><th>CFID</th><td>{{child.cfid}}</td></tr>
+          <tr><th>Worker</th><td>{{child.worker}}</td></tr>
+          <tr><th></th><td></td></tr>
+        </table>
+      </div>
+    </div>
+  </div>
+</div>
