--- a/client/templates/admin/workers.html
+++ b/client/templates/admin/workers.html
@@ -16,7 +16,7 @@
           <tr><th>CFID</th><td>{{worker.cfid}}</td></tr>
           <tr><th>Children</th><th>First Name</th><th>Last Name</th></tr>
           <tr ng-repeat="child in worker.children"><td></td><td>{{child.firstName}}</td><td>{{child.lastName}}</td></tr>
-          <tr><th></th><td></td></tr>
+          <tr><td><button>Change Worker</button></td></tr>
         </table>
       </div>
     </div>
