--- a/client/templates/admin/workers.html
+++ b/client/templates/admin/workers.html
@@ -13,10 +13,41 @@
         <table class="table">
           <tr><th>Worker ID</th><td>{{worker.id}}</td></tr>
           <tr><th>CFID</th><td>{{worker.cfid}}</td></tr>
-          <tr><th>Children</th><th>First Name</th><th>Last Name</th></tr>
-          <tr ng-repeat="child in worker.children"><td></td><td>{{child.firstName}}</td><td>{{child.lastName}}</td></tr>
-          <tr><td><button>Change Worker</button></td></tr>
+          <tr><th>Children</th><th>First Name</th><th>Last Name</th><th></th></tr>
+          <tr ng-repeat="child in worker.children">
+            <td></td>
+            <td>{{child.firstName}}</td>
+            <td>{{child.lastName}}</td>
+            <td><button class="btn btn-primary" data-toggle="modal" data-target="#myModal" ng-click="setChildForModal(child)">Change Worker</button></td>
+          </tr>
         </table>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title" id="myModalLabel">{{modalChild.firstName}} {{modalChild.lastName}}</h4>
+      </div>
+      <div class="modal-body">
+        <h2>Change Worker for Child: {{modalChild.firstName}} {{modalChild.lastName}}</h2>
+        <form role="form" class="form-inline" ng-submit="fetchWorker()">
+          <div class="form-group">
+            <input placeholder="Input worker last name" class="form-control" ng-model="workerQuery">
+            <input type="submit" class="btn btn-primary">
+          </div>
+          <table class="table">
+            <tr ng-repeat="worker in matchedWorkers" ng-click="setWorker(worker)"><td>{{worker.firstName}} {{worker.lastName}}</td></tr>
+          </table>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary" ng-click="saveWorker()">Save changes</button>
       </div>
     </div>
   </div>
