Add basic scaffolding for generating report, no serverside changes yet

--- a/client/templates/admin/account.html
+++ b/client/templates/admin/account.html
@@ -6,5 +6,6 @@
 <button ui-sref="admin.account.accountManagement.helpDesk" class="btn btn-primary">Show Help Desk Users</button>
 <button ui-sref="admin.account.children" class="btn btn-primary">Show Children</button>
 <button ui-sref="admin.account.workers" class="btn btn-primary">Show Workers</button>
+<button ui-sref="admin.account.reports" class="btn btn-primary">Generate Reports</button>
 
 <div ui-view></div>
