--- a/client/templates/public/home.html
+++ b/client/templates/public/home.html
@@ -1,6 +1,15 @@
 <div>
   <h1>Children</h1>
-  <div class="center box lg" ng-repeat="child in children | orderBy:'createdAt' :true | filter:{status: null}">
+  <div class="center box lg" ng-repeat="child in children | orderBy:'createdAt' :true">
+
+  <!-- 
+
+  Commented out the "status" filter for child objects
+
+  <div class="center box lg" ng-repeat="child in children | orderBy:'createdAt' :true | filter:{status: null}"> 
+
+
+  -->
     <img src="http://cdn.mhpbooks.com/uploads/2013/10/Success-Kid.jpg" alt="some kid">
     <!-- child's name -->
     <div>
